--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -61,6 +61,10 @@
                                 <table class="datatables datatables-ajax table table-responsive table">
                                     <thead>
                                         <tr>
+                                            @if (accessLevel.DeleteAccess)
+                                            {
+                                                <th><input type="checkbox" class="selectAllAccounts" value=""></th>
+                                            }
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
 
@@ -82,6 +86,10 @@
                                                 @if (accessLevel.DeleteAccess)
                                                 {
                                                     <a id="delete" asp-action="Delete">
+                                                    </a>
+                                                    
+                                                    <a id="customButton" data-label="@Localizer.Get("Delete ALl")"
+                                                       data-color="info" asp-action="DeleteBulk">
                                                     </a>
                                                 }
 
@@ -136,12 +144,28 @@
                             data.Phone = $("#Phone").length > 0 ? $("#Phone").val() : '@Model.Phone';
                             data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
                             data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
+                            data.DashboardSearch = $("#DataTables_Table_0_filter input").val();
                           
                             return JSON.stringify(data);
                         }
                     },
                     // Columns Setups
                     columns: [
+                        @if (accessLevel.DeleteAccess)
+                        {
+                            <Text>
+                                {
+                                     data: "id",
+                                     'targets': 0,
+                                     'searchable': false,
+                                     'orderable': false,
+                                     'className': 'dt-body-center',
+                                     'render': function (data, type, full, meta){
+                                         return '<input type="checkbox" name="fk_Accounts[]" value="' + $('<div/>').text(data).html() + '">';
+                                     }
+                                },
+                            </Text>
+                        }
                         { data: "id" },
                         {
                             data: "fullName",
@@ -224,6 +248,34 @@
                 CheckDisplayType();
             });
 
+            $(document).on("click", ".selectAllAccounts", function() {
+              $('input:checkbox').prop('checked', this.checked);
+            });
+            
+            $(document).on("click", ".custom_btn", function(e) {
+                e.preventDefault();
+                
+                let fk_Accounts = $('input[name="fk_Accounts[]"]:checked').map(function(){return $(this).val();}).get();
+                
+                if (fk_Accounts.length == 0) {
+                    alert('choose one at least');
+                } else if (confirm('Are you sure ?')) {
+                    $.ajax({
+                        url: `@Url.ActionLink("DeleteBulk", "Account", new { area = "AccountEntity" })`,
+                        method: "post",
+                        data: { ids: fk_Accounts },
+                        success: function () {
+                            $("#success").modal('show');
+                            $('.datatables').DataTable().draw();
+                        },
+                        error: function () {
+                            $("#danger").modal('show');
+                        },
+                    });
+                }
+                
+            });
+            
                 // $('body').on('click', '#ExcelBtn', function () {
                 //     $.ajax({
 @*              //         url:'@Url.Action("ExportExcel")',                                  *@
@@ -234,6 +286,7 @@
                 //             }
                 //     });
                 // });
+                
 
 
         });
