--- a/Dashboard/Views/Shared/_styles.cshtml
+++ b/Dashboard/Views/Shared/_styles.cshtml
@@ -4,6 +4,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
+<link href="~/font-awesome/all.min.css" rel="stylesheet">
 
 <!-- BEGIN: Vendor CSS-->
 <link rel="stylesheet" type="text/css" href="~/app-assets/vendors/css/vendors@(rtl).min.css">
